--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css">
     <script src="/bundle.js"></script>
   </head>
   <body>
-    <p>start watching ...</p>
+    <article id="markdown" class="markdown-body">
+    </article>
   </body>
 </html>
